# sh-baker

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.md
data/ABeautifulGame/: ABeautifulGame.gltf
data/DirectionalLight/: scene.gltf
data/Sponza/: scene.gltf
data/box/: scene.gltf
data/plane/: scene.gltf
glsl/: blur.frag  bright.frag  lum.frag  post.frag  post.vert  sky.frag  sky.vert  viz.frag  viz.vert
src/: atlas.cpp  atlas.h  atlas_test.cpp  baker.cpp  baker.h  baker_test.cpp  colorspace.h  dilation.cpp  dilation.h  dilation_test.cpp  io.cpp  io.h  io_test.cpp  light.cpp  light.h  light_test.cpp  loader.cpp  loader_test.cpp  main.cpp  material.cpp  material.h  material_test.cpp  miniz.h  miniz_export.h  occlusion.cpp  occlusion.h  occlusion_test.cpp  rasterizer.cpp  rasterizer.h  rasterizer_test.cpp  saver.cpp  saver.h  saver_test.cpp  scene.cpp  scene.h  scene_test.cpp  sh_coeffs.cpp  sh_coeffs.h  sh_coeffs_test.cpp  sh_cvt_main.cpp  (+3 more)
tools/: blender_viz.py
